# Job-market-analysis

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-17-job-market-crawler-design.md
openspec/changes/implement-campus-tech-crawler/: design.md  proposal.md  tasks.md
openspec/changes/implement-campus-tech-crawler/specs/crawler-pipeline/: spec.md
openspec/changes/implement-campus-tech-crawler/specs/job-collection/: spec.md
openspec/changes/implement-campus-tech-crawler/specs/job-storage/: spec.md
openspec/changes/implement-campus-tech-crawler/specs/tech-classification/: spec.md
openspec/changes/implement-campus-tech-crawler/specs/trends-reporting/: spec.md
src/job_market/: __init__.py  __main__.py  classifier.py  cli.py  fetcher.py  normalizer.py  pipeline.py  storage.py
src/job_market/adapters/: __init__.py  _common.py  alibaba.py  baidu.py  base.py  bytedance.py  huawei.py  jd.py  meituan.py  netease.py  pinduoduo.py  tencent.py  xiaomi.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_fetcher.py  test_normalizer.py  test_pipeline.py  test_robots.py  test_storage.py
tests/adapters/: test_alibaba.py  test_baidu.py  test_base.py  test_bytedance.py  test_huawei.py  test_jd.py  test_meituan.py  test_netease.py  test_pinduoduo.py  test_tencent.py  test_xiaomi.py
tests/fixtures/: alibaba_jobs_p1.json  baidu_jobs_p1.json  bytedance_jobs_p1.json  huawei_jobs_p1.json  jd_jobs_p1.json  meituan_jobs_p1.json  netease_jobs_p1.json  pinduoduo_jobs_p1.json  tencent_jobs_p1.json  xiaomi_jobs_p1.json
